--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,6 @@ jobs:
         with:
           python-version: '3.8'
       - name: Test
-        uses: onichandame/python-test-action@master
+        uses: tests/
         with:
           deps_list: 'requirements.txt'
