--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,7 +73,7 @@ jobs:
         id: test-results
         if: always()
         with:
-          files: "test-results/**/*.xml"
+          files: "artifacts/**/*.xml"
 
       - name: Set badge color
         shell: bash
