--- a/.github/workflows/m2.yml
+++ b/.github/workflows/m2.yml
@@ -131,7 +131,7 @@ jobs:
         uses: andymckay/append-gist-action@1fbfbbce708a39bd45846f0955ed5521f2099c6d
         with:
           token: ${{ secrets.GIST_TOKEN }}
-          gistURL: https://gist.githubusercontent.com/{user}/{id}
+          gistURL: https://gist.githubusercontent.com/GoodSay/{id}
           file: badge.svg
 
 
