--- a/.github/workflows/m4.yml
+++ b/.github/workflows/m4.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
       - name: Deploy with rsync
-        run: ls -la && pwd
+        run: rsync -avz $GITHUB_WORKSPACE ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/v3/
