--- a/.github/workflows/m4.yml
+++ b/.github/workflows/m4.yml
@@ -7,12 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     name: deploy on ssh server
     steps:
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.KEY }} 
-          known_hosts: 'just-a'
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
-      - name: Deploy with rsync
-        run: rsync -avz $GITHUB_WORKSPACE ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/v3/
+      - name: Deploy to server
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.KEY }}
+          ARGS: "-rltgoDzvO"
+          SOURCE: "dist/"
+          REMOTE_HOST: ${{ secrets.HOST }}
+          REMOTE_USER: ${{ secrets.USERNAME }}
+          TARGET: ${{ secrets.TARGET }}
+          EXCLUDE: "/dist/, /node_modules/"
