--- a/.github/workflows/_codeql.yml
+++ b/.github/workflows/_codeql.yml
@@ -1,7 +1,11 @@
 name: CodeQL
 on:
-  push: *
-  pull_request: *
+  push:
+    branches:
+      - '*'
+  pull_request:
+    branches:
+      - '*'
 jobs:
   analyze:
     name: Analyze
