--- a/.github/workflows/_codeql.yml
+++ b/.github/workflows/_codeql.yml
@@ -2,10 +2,12 @@ name: CodeQL
 on:
   push:
     branches:
-      - '*'
+      - 'main'
+      - 'dev'
   pull_request:
     branches:
-      - '*'
+      - 'main'
+      - 'dev'
 jobs:
   analyze:
     name: Analyze
