--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
-
+beautifulsoup4==4.11.1
+certifi==2022.6.15
+charset-normalizer==2.0.12
+colorama==0.4.5
+et-xmlfile==1.1.0
+idna==3.3
+lxml==4.9.0
+openpyxl==3.0.10
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
+requests==2.28.0
+soupsieve==2.3.2.post1
+tqdm==4.64.0
+urllib3==1.26.9
+wget==3.2
