--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -12,6 +12,14 @@ jobs:
     steps:
       - name: Checkout source repository
         uses: actions/checkout@v3
+      - name: Setup Python environment
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Test Coverage
         uses: codecov/codecov-action@v1
         with:
