--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -14,7 +14,7 @@ jobs:
         pip install pytest
         pip install -r requirements.txt
     - name: Run tests and collect coverage
-      run: pytest --cov .
+      run: python -m pytest test --junit-xml pytest.xml
     - name: Upload coverage reports to Codecov
       run: |
         # Replace `linux` below with the appropriate OS
