--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -15,10 +15,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests and collect coverage
       run: python -m pytest test --junit-xml pytest.xml
-    - name: Upload coverage reports to Codecov
-      run: |
-        # Replace `linux` below with the appropriate OS
-        # Options are `alpine`, `linux`, `macos`, `windows`
-        curl -Os https://uploader.codecov.io/latest/linux/codecov
-        chmod +x codecov
-        ./codecov -t ${{ secrets.CODECOV }}
+    - name: Test Coverage
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV }}
