--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -11,6 +11,7 @@ jobs:
     - name: Install requirements
       run: |
         python -m pip install --upgrade pip
+        pip install coverage
         pip install pytest
         pip install -r requirements.txt
     - name: Run tests and collect coverage
