--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -15,7 +15,7 @@ jobs:
         pip install pytest
         pip install -r requirements.txt
     - name: Run tests and collect coverage
-      run: python -m pytest test --junit-xml pytest.xml
+      run: python -m pytest test --junit-xml pytest.xml --cover-xml
     - name: Test Coverage
       uses: codecov/codecov-action@v1
       with:
