--- a/.github/workflows/heartbeat.yml
+++ b/.github/workflows/heartbeat.yml
@@ -1,1 +1,36 @@
-
+name: heartbeat
+on:
+  pull_request:
+    branches:    
+      - 'master'
+      - 'dev'
+  schedule:
+    - cron: '*/5 * * * *'
+jobs:
+  ping:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source repository
+        uses: actions/checkout@v3
+      - name: Curl actuator
+        id: ping
+        run: |
+          echo "::set-output name=status::$(curl ${{secrets.HOST}}/api/actuator/health)"
+      - name: Health check
+        run: |
+          if [[ ${{ steps.ping.outputs.status }} != *"UP"* ]]; then
+            echo "health check is failed"
+            exit 1
+          fi
+          echo "It's OK"       
+      - name: Send alert in telegram
+        if: ${{ failure() }}
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            Health check of the:
+            ${{secrets.SERVER_HOST}}/api/health
+            failed with the result:
+            ${{ steps.ping.outputs.status }}
