--- a/.github/workflows/heartbeat.yml
+++ b/.github/workflows/heartbeat.yml
@@ -5,7 +5,7 @@ on:
       - 'main'
       - 'dev'
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '30 * * * *'
 jobs:
   ping:
     runs-on: ubuntu-latest
