--- a/.github/workflows/heartbeat.yml
+++ b/.github/workflows/heartbeat.yml
@@ -18,7 +18,7 @@ jobs:
           echo "::set-output name=status::$(curl --connect-timeout 10 --max-time 10 http://51.210.128.134:5000/api/health)"
       - name: Health check
         run: |
-          if [[ ${{ steps.ping.outputs.status }} != *"UP"* ]]; then
+          if [[ ${{ steps.ping.outputs.status }} != OK ]]; then
             echo "health check is failed"
             exit 1
           fi
