--- a/.github/workflows/heartbeat.yml
+++ b/.github/workflows/heartbeat.yml
@@ -12,17 +12,21 @@ jobs:
     steps:
       - name: Checkout source repository
         uses: actions/checkout@v3
+        
       - name: Curl actuator
-        id: ping
+        id: ping1
         run: |
           echo "::set-output name=status::$(curl --connect-timeout 10 --max-time 10 http://51.210.128.134:5000/api/health)"
+          
       - name: Health check
+        id: w1
         run: |
           if [[ ${{ steps.ping.outputs.status }} != OK ]]; then
-            echo "health check is failed"
+            echo "::set-output name=status::$(echo error)"
             exit 1
           fi
-          echo "It's OK"       
+          echo "::set-output name=status::$(echo ok)"
+          
       - name: Send alert in telegram
         if: ${{ failure() }}
         uses: appleboy/telegram-action@master
@@ -30,7 +34,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            Health check of the:
+            Heartbeat 💗:
             ${{secrets.HOST}}/api/health
             failed with the result:
             ${{ steps.ping.outputs.status }}
