--- a/.github/workflows/heartbeat.yml
+++ b/.github/workflows/heartbeat.yml
@@ -15,10 +15,8 @@ jobs:
         
       - name: Curl actuator
         id: ping1
-        run: |
-          echo "::set-output name=status::$(curl --connect-timeout 10 --max-time 10 http://51.210.128.134:5000/api/health)"
-          
-          if [[ ${{ steps.ping1.outputs.status }} != OK ]]; then
+        run: |         
+          if [[ curl --connect-timeout 10 --max-time 10 http://51.210.128.134:5000/api/health != OK ]]; then
             echo "::set-output name=status::$(echo error)"
           else
             echo "::set-output name=status::$(echo ok)"
