--- a/.github/workflows/heartbeat.yml
+++ b/.github/workflows/heartbeat.yml
@@ -14,13 +14,10 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Curl actuator
-        id: ping1
-        run: |         
-          if [[ (curl --connect-timeout 10 --max-time 10 http://51.210.128.134:5000/api/health) != OK ]]; then
-            echo "::set-output name=status::$(echo error)"
-          else
-            echo "::set-output name=status::$(echo ok)"
-          fi         
+        id: ping
+        run: |
+          echo "::set-output name=status1::$(curl --connect-timeout 10 --max-time 10 http://51.210.128.134:5000/api/health)"
+          echo "::set-output name=status2::$(curl --connect-timeout 10 --max-time 10 http://51.210.128.134:5005/api/health)"
           
       - name: Send alert in telegram
         uses: appleboy/telegram-action@master
@@ -29,4 +26,5 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
             Heartbeat 💗
-            51.210.128.134:5000/api/health | ${{ steps.ping1.outputs.status }}          
+            51.210.128.134:5000/api/health | ${{ steps.ping.outputs.status1 }}
+            51.210.128.134:5005/api/health | ${{ steps.ping.outputs.status2 }}
