--- a/.github/workflows/t.yml
+++ b/.github/workflows/t.yml
@@ -26,7 +26,7 @@ jobs:
       - name: 'Auto merge'
         uses: "pascalgn/automerge-action@v0.12.0"
         env:
-          GITHUB_TOKEN: "${{ secrets.GH_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.GH }}"
           MERGE_METHOD: 'merge'
           MERGE_LABELS: "approved,!work"
           MERGE_REMOVE_LABELS: "approved"
